[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
# Náš lokální sdílený balíček
common_models = { path = "../libs/common_models" }

# Asynchronní běhové prostředí
tokio = { version = "1.1", features = ["full"] }

# Asynchronní MQTT klient
rumqttc = "0.24"

# Zpracování JSONu
serde_json = "1.0"

tracing = "0.1"
